@@ -263,8 +263,7 @@ none</simpara></listitem>
 	<term><parameter role="keyword">flags</parameter>&nbsp;:</term>
 	<listitem><simpara>the dialog flags - a combination of:
 <literal>gtk.DIALOG_MODAL</literal>,
-<literal>gtk.DIALOG_DESTROY_WITH_PARENT</literal>,
-<literal>gtk.DIALOG_NO_SEPARATOR</literal> or 0 for no
+<literal>gtk.DIALOG_DESTROY_WITH_PARENT</literal> or 0 for no
 flags</simpara></listitem>
       </varlistentry>
       <varlistentry>
@@ -304,9 +303,8 @@ warning, etc.) specified by <parameter>type</parameter> and some text
 <parameter>parent</parameter> if specified indicates the transient parent of
 the dialog. The <parameter>flags</parameter> allow the specification special
 dialog characteristics: make the dialog modal
-(<literal>gtk.DIALOG_MODAL</literal>), destroy the dialog when the parent is
-destroyed (<literal>gtk.DIALG_DESTROY_WITH_PARENT</literal>) and remove the
-separator bar (<literal>gtk.DIALOG_NO_SEPARATOR</literal>). When the user
+(<literal>gtk.DIALOG_MODAL</literal>) and destroy the dialog when the parent is
+destroyed (<literal>gtk.DIALG_DESTROY_WITH_PARENT</literal>). When the user
 clicks a button a "response" signal is emitted with response IDs.
 <parameter>buttons</parameter> specifies the set of predefined buttons to
 use: <literal>gtk.BUTTONS_NONE</literal>, <literal>gtk.BUTTONS_OK</literal>,
