@@ -1,3 +1,9 @@
+2004-03-22  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkmessagedialog.xml (MessageDialog) Remove
+	gtk.DIALOG_NO_SEPARATOR from the list of valid flags. Fixes #136984.
+	(thanks to j.jordens and Eric Grinaker).
+
 2004-04-13  Erik Grinaker  <erikg@wired-networks.net>
 
 	* pygtk-gdkwindow.xml (raise): Changed name of raise() to
